@@ -3753,7 +3753,6 @@ test_bulk_max_batch_size (void)
 static void
 test_bulk_new (void)
 {
-   mongoc_bulk_operation_t *bulk;
    mongoc_collection_t *collection;
    mongoc_client_t *client;
    bson_error_t error;
@@ -3761,43 +3760,69 @@ test_bulk_new (void)
    uint32_t r;
 
    client = test_framework_new_default_client ();
-   BSON_ASSERT (client);
+   ASSERT (client);
 
    collection = get_test_collection (client, "bulk_new");
-   BSON_ASSERT (collection);
+   ASSERT (collection);
 
-   bulk = mongoc_bulk_operation_new (true);
-   mongoc_bulk_operation_destroy (bulk);
+   // Can create and destroy:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
-   bulk = mongoc_bulk_operation_new (true);
+   // Execute without a client is an error:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      r = mongoc_bulk_operation_execute (bulk, NULL, &error);
+      ASSERT (!r);
+      ASSERT_ERROR_CONTAINS (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "requires a client");
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
-   r = mongoc_bulk_operation_execute (bulk, NULL, &error);
-   BSON_ASSERT (!r);
-   ASSERT_CMPINT (error.domain, ==, MONGOC_ERROR_COMMAND);
-   ASSERT_CMPINT (error.code, ==, MONGOC_ERROR_COMMAND_INVALID_ARG);
+   // Execute with a database and no client is an error:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      mongoc_bulk_operation_set_database (bulk, "test");
+      r = mongoc_bulk_operation_execute (bulk, NULL, &error);
+      ASSERT (!r);
+      ASSERT_ERROR_CONTAINS (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "requires a client");
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
-   mongoc_bulk_operation_set_database (bulk, "test");
-   r = mongoc_bulk_operation_execute (bulk, NULL, &error);
-   BSON_ASSERT (!r);
-   ASSERT_CMPINT (error.domain, ==, MONGOC_ERROR_COMMAND);
-   ASSERT_CMPINT (error.code, ==, MONGOC_ERROR_COMMAND_INVALID_ARG);
+   // Execute with a database and collection and no client is an error:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      mongoc_bulk_operation_set_database (bulk, "test");
+      mongoc_bulk_operation_set_collection (bulk, "test");
+      r = mongoc_bulk_operation_execute (bulk, NULL, &error);
+      ASSERT (!r);
+      ASSERT_ERROR_CONTAINS (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "requires a client");
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
-   mongoc_bulk_operation_set_collection (bulk, "test");
-   r = mongoc_bulk_operation_execute (bulk, NULL, &error);
-   BSON_ASSERT (!r);
-   ASSERT_CMPINT (error.domain, ==, MONGOC_ERROR_COMMAND);
-   ASSERT_CMPINT (error.code, ==, MONGOC_ERROR_COMMAND_INVALID_ARG);
+   // Execute with no operations is an error:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      mongoc_bulk_operation_set_database (bulk, "test");
+      mongoc_bulk_operation_set_collection (bulk, "test");
+      mongoc_bulk_operation_set_client (bulk, client);
+      r = mongoc_bulk_operation_execute (bulk, NULL, &error);
+      ASSERT (!r);
+      ASSERT_ERROR_CONTAINS (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "empty bulk write");
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
-   mongoc_bulk_operation_set_client (bulk, client);
-   r = mongoc_bulk_operation_execute (bulk, NULL, &error);
-   BSON_ASSERT (!r);
-   ASSERT_CMPINT (error.domain, ==, MONGOC_ERROR_COMMAND);
-   ASSERT_CMPINT (error.code, ==, MONGOC_ERROR_COMMAND_INVALID_ARG);
-
-   mongoc_bulk_operation_insert (bulk, &empty);
-   ASSERT_OR_PRINT (mongoc_bulk_operation_execute (bulk, NULL, &error), error);
-
-   mongoc_bulk_operation_destroy (bulk);
+   // Execute with operations is OK:
+   {
+      mongoc_bulk_operation_t *bulk = mongoc_bulk_operation_new (true);
+      mongoc_bulk_operation_set_database (bulk, "test");
+      mongoc_bulk_operation_set_collection (bulk, "test");
+      mongoc_bulk_operation_set_client (bulk, client);
+      mongoc_bulk_operation_insert (bulk, &empty);
+      ASSERT_OR_PRINT (mongoc_bulk_operation_execute (bulk, NULL, &error), error);
+      mongoc_bulk_operation_destroy (bulk);
+   }
 
    mongoc_collection_drop (collection, NULL);
 
@@ -4766,6 +4791,23 @@ test_bulk_write_set_client_updates_operation_id_when_client_changes (void)
    mock_server_destroy (mock_server);
 }
 
+static void
+test_multiple_execution (void)
+{
+   mongoc_client_t *client = test_framework_new_default_client ();
+   mongoc_collection_t *coll = get_test_collection (client, "test_multiple_execution");
+   bson_error_t error;
+   mongoc_bulk_operation_t *bulk = mongoc_collection_create_bulk_operation (coll, true, NULL);
+   mongoc_bulk_operation_insert (bulk, tmp_bson ("{}"));
+   ASSERT_OR_PRINT (mongoc_bulk_operation_execute (bulk, NULL, &error), error);
+   ASSERT (!mongoc_bulk_operation_execute (bulk, NULL, &error));
+   ASSERT_ERROR_CONTAINS (error, MONGOC_ERROR_COMMAND, MONGOC_ERROR_COMMAND_INVALID_ARG, "bulk write already executed");
+   mongoc_bulk_operation_destroy (bulk);
+   mongoc_collection_destroy (coll);
+   mongoc_client_destroy (client);
+}
+
+
 void
 test_bulk_install (TestSuite *suite)
 {
@@ -4944,4 +4986,5 @@ test_bulk_install (TestSuite *suite)
    TestSuite_AddMockServerTest (suite,
                                 "/BulkOperation/set_client_updates_operation_id_when_client_changes",
                                 test_bulk_write_set_client_updates_operation_id_when_client_changes);
+   TestSuite_AddLive (suite, "/BulkOperation/multiple_execution", test_multiple_execution);
 }
